--- a/src/common/styles/CommonStyles.css
+++ b/src/common/styles/CommonStyles.css
@@ -32,19 +32,24 @@
 .header-item-add-button{
     padding: 0.4rem;
     background-color: #FFE662;
-    border: none;
     border-radius: 8px;
+    border-width: 0.1rem;
     cursor: pointer;
     text-align: center;
     font-size: 14px;
     font-weight: 600;
-    color: rgb(49, 20, 20);
+    color: rgb(34, 32, 32);
     height: 3rem;
     margin-right: 0.4rem;
 }
 
 .header-item-add-button:hover{
     background-color: #ecd24d;
+}
+
+.header-item-add-button:focus{
+    border-color: rgb(114, 33, 8);
+    border-width: 0.25rem;
 }
 
 .action-bar{
@@ -64,7 +69,7 @@
 }
 
 .action-bar-btn-confirm{
-  border: none;
+  border-width: 0rem;
   border-radius: 5px;
   font-weight: 500;
   text-align: center;
@@ -76,17 +81,19 @@
 }
 
 .action-bar-btn-cancel{
-  border: 2px solid #7E0A0A;
+  border: 2px solid #a30000;
+  background-color: #fff;
   border-radius: 5px;
   font-weight: 500;
   text-align: center;
   cursor: pointer;
-  color:#7E0A0A ;
+  color:#a30000 ;
   padding: 0.3rem;
 }
 
 .action-bar-btn-confirm:focus{
-  background-color:#002200 ;
+  border-width: 0.25rem;
+  border-color:#0c920c ;
 }
 
 .action-bar-btn:focus {     
